# evdm

./: .gitignore  README.md  pyproject.toml
scripts/: example-multi-speaker.py  example-oai-dg-multi-speaker.py  example-oai-realtime.py  example-oai-speech-to-speech.py  example.py
src/evdm/: actors.py  bus.py  core.py  events.py
src/evdm/actors/: audio.py  conversation.py  core.py
src/evdm/actors/audio/: deepgram.py
src/evdm/actors/conversation/: openai.py
tests/: test_bus.py
